Add findAttenders method in MeetingService